tab title and window title add asterisk when file changes, removes asterisk when file saved

--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,7 +1,11 @@
 **Immediate (NOW):**
+- When change happens to file, add * at the beginning to the tab.
 - When reading a file, check for [commoncollection type, for example [films]].
 - When saving a file, save [films] in first or any column header. Add version number.
 - When saving a file. Abstract which columns are not saved and what metadata [s] etc are not saved in column headers.
+- Fix closing program.
+- When opening a program. Reopen last file paths.
+- Add settings if reopen last files.
 - Fix search feature.
 	- Check what is being saved when search is on.
 - When changing tab, change: window title bar, statistics, buttons disability.
@@ -37,6 +41,7 @@
 - Clear all should have confimation dialog.
 - Simplify tabs and working text files lists. Create a dictionary that will connect them. Or tabitem reference is in workingtextfile.
 - When removing column, set selection in the same way when removing a row.
+- ctrl+w to close currently opened tab.
 
 **Upcoming (SOON):**
 - Reading from any number of csv values works. Uncomment code and fix it one by one.
