--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -2,6 +2,8 @@
 - Fix average rating statistics.
 	- Fix up and clean up events and event handlers. Too many and some of them are reduntant.
 - Date sorting doesn't work. It sorts as a text, not as a date.
+	- Centralise how columns are created. Make sure columns are created in one place only from one method. When column is created, make sure it immediately has set Binding and Sortpath in the same place instead of jumping around. Binding and Sortpath must be done immediately when column is created.
+	- Delete NumberValue object from cell. Keep Value and add ComparableValue Object that will return proper value.
 - Predefined statistics. Films are: group by decade 10*10 +"s", count of decade films, average rating 0.## + "/4.00".
 - Prefefined statistics. Games are: group by Platform, etc.
 - When saving a file, save [films] in first or any column header. Add version number.
