--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -3,7 +3,9 @@
 	- Fix up and clean up events and event handlers. Too many and some of them are reduntant.
 - Date sorting doesn't work. It sorts as a text, not as a date.
 	- Centralise how columns are created. Make sure columns are created in one place only from one method. When column is created, make sure it immediately has set Binding and Sortpath in the same place instead of jumping around. Binding and Sortpath must be done immediately when column is created.
-	- Delete NumberValue object from cell. Keep Value and add ComparableValue Object that will return proper value.
+- Create list of columns and their preferred data types. Display it in the GUI so user can choose what data type a column holds, this will be used for the proper sorting.
+	- When creating new cell, check status of preferred data types and make the cell the preferred data type.
+	- Check if deleting column will also change how columns sort.
 - Predefined statistics. Films are: group by decade 10*10 +"s", count of decade films, average rating 0.## + "/4.00".
 - Prefefined statistics. Games are: group by Platform, etc.
 - When saving a file, save [films] in first or any column header. Add version number.
