WIP change column and cells data type

--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,5 +1,9 @@
 **Immediate (This update):**
-- Create method that will change the DataType Cell in each column.
+- Change all cell types in the column.
+	- Test if it works by sorting ID column.
+
+- When creating new row. Check data types of columns and create cell with correct data type.
+
 - When Apply Data type changes is clicked
 	- Check the status of the radio buttons and apply those changes to the columns.
 
